Fix z-index for navigation bar

--- a/src/main/resources/retejo/styles/NavigationBar.css
+++ b/src/main/resources/retejo/styles/NavigationBar.css
@@ -7,6 +7,7 @@
     height: 6em;
     text-align: left;
     background-color: var(--Esperanto-green);
+    z-index: 100;
 }
 
 .navigation-buttons {
